band-name-generator-end
  File "/home/runner/Python/main.py", line 1
    print("Welcome in python, sadhana)
          ^
SyntaxError: unterminated string literal (detected at line 1)
